  on the destination node. [Boy,Harrie]
* Fixed filtering and navigating after update/save for navigator [Boy]
* Fixed bug that would produce php error with NF_EDITAFTERADD 
  when a NULL value for a record is passed to editArray() [Boy]
* Fixed prev/next keyboard navigation in recordlists. [Yury]
* Fixed a potential session hijacking vulnerability. [Sandy]

Changes in ATK 5.0.6
--------------------
* Bugfix in Oracle 9i/10G driver. [Ivo]
* 'Import' link is now hidden if NF_READONLY is set. [Ivo]
* Fixed bug in validateFilter for filters with tablename and added docs. [Boy]
* Fixed bug in record navigator when no form was present on the page. [Ivo]
+ Base language directory can be set with $config_language_basedir. [Boy]
* Default applicaton language dir is now languages/. [Ivo]

Changes in ATK 5.0.5
--------------------
+ Added generic CSV import feature. [Ivo, Mark]
+ Added atkFormatAttribute for editing formatted values. [Ivo]
+ Added paging to atkOneToManyrelation (embedded recordlists). [Harrie]
+ Added edit_values() and initial_values() methods to atkNode class. [Ivo]
+ Login screen now uses its own CSS file (login.css). [Boy]
+ Added autoadjust feature to atkTextAttribute. [Boy]
+ Added deleteAllowed method to all attributes, so attributes can now
  'approve' the delete of a record. [Boy]
+ Added AF_RESTRICTED_DELETE flag to the atkOneToManyRelation. [Boy]
+ Added AF_DUMMY_SHOW_LABEL, which causes dummy attribs to be labeled [Boy]
+ Added register_hiddenvars() to atkPage [Boy]
+ Added flags to atkPage's render() method. [Sandy]
+ validateFilter() now recognizes all standard SQL operators. [Boy]
+ atkNavigator now accepts custom filters. [Boy]
* Fixed alignment of fieldlabels and error messages. [Ivo]
* Fix in NF_ML, when having optional relationships. [Lineke,Ivo]
* Fixed removal of leading spaces from values by removing a php4.0.4pl1
  compatibility hack. [Ivo]
* Fixed bug in atkManyToOnerelation when pointing to a primarykey that in its